syntax = "proto3";

package demo;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/iov-one/weave/codec.proto";

// Request is the generic request, knowledge how to parse out options is externally defined
message Request {
    weave.Metadata metadata = 1;
    string title = 2;
    bytes raw_option = 3;
}

